testData/annotator/annotatorTest.pas
var a, b: <error descr="Undeclared identifier">Int</error>;
const c = 1;
begin
  <caret>;
end.